adding all my current commands (in progress)

--- a/Commands.html
+++ b/Commands.html
@@ -18,7 +18,47 @@
 			<th>Abbriviations</th>
 		</tr>
 		<tr>
+			<td>AdBreak</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>ATIS</td>
+			<td>(Atis word)</td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Buffalo-Wings</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>C152</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>CentimeterDefeater</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
 			<td>Discord</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Echi</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>EssentialsCourse</td>
+			<td> </td>
+			<td>EC</td>
+		</tr>
+		<tr>
+			<td>First</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -26,6 +66,46 @@
 			<td>Flightplan</td>
 			<td> </td>
 			<td>FP  Plan  Route</td>
+		</tr>
+		<tr>
+			<td>Gottem</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>GreatCycleChallenge</td>
+			<td> </td>
+			<td>GCC</td>
+		</tr>
+		<tr>
+			<td>LearnATC</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Lurk</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>MistaAhneating</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>MistaDrippy</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>MistaStew</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>MistaTexas</td>
+			<td> </td>
+			<td> </td>
 		</tr>
 		<tr>
 			<td>Onlyfans</td>
@@ -48,7 +128,17 @@
 			<td>PC</td>
 		</tr>
 		<tr>
+			<td>ThePilotClub</td>
+			<td> </td>
+			<td>TPC  Pilotclub</td>
+		</tr>
+		<tr>
 			<td>Throttle</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>TrackIR</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -63,7 +153,42 @@
 			<td> </td>
 		</tr>
 		<tr>
+			<td>VatspyColors</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>VirtualUSAFlyingClub</td>
+			<td> </td>
+			<td>vUSAFC</td>
+		</tr>
+		<tr>
+			<td>WestWind</td>
+			<td> </td>
+			<td>WWA</td>
+		</tr>
+		<tr>
+			<td>Wings</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
 			<td>Yoke</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>YouTube</td>
+			<td> </td>
+			<td>YT</td>
+		</tr>
+		<tr>
+			<td>ZHU</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>ZID</td>
 			<td> </td>
 			<td> </td>
 		</tr>
