--- a/Commands.html
+++ b/Commands.html
@@ -38,7 +38,22 @@
 			<td> </td>
 		</tr>
 		<tr>
+			<td>Callsigns</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
 			<td>CentimeterDefeater</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Certs</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Chair</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -49,6 +64,11 @@
 		</tr>
 		<tr>
 			<td>Echi</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Epic</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -68,6 +88,11 @@
 			<td>FP  Plan  Route</td>
 		</tr>
 		<tr>
+			<td>ForeverApproach</td>
+			<td> </td>
+			<td>FA</td>
+		</tr>
+		<tr>
 			<td>Gottem</td>
 			<td> </td>
 			<td> </td>
@@ -76,6 +101,16 @@
 			<td>GreatCycleChallenge</td>
 			<td> </td>
 			<td>GCC</td>
+		</tr>
+		<tr>
+			<td>Invis</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Last</td>
+			<td> </td>
+			<td> </td>
 		</tr>
 		<tr>
 			<td>LearnATC</td>
@@ -98,12 +133,22 @@
 			<td> </td>
 		</tr>
 		<tr>
+			<td>MistaShempasta</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
 			<td>MistaStew</td>
 			<td> </td>
 			<td> </td>
 		</tr>
 		<tr>
 			<td>MistaTexas</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Newbie</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -119,6 +164,16 @@
 		</tr>
 		<tr>
 			<td>Piotato</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>Prime</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td>RandomFlight</td>
 			<td> </td>
 			<td> </td>
 		</tr>
@@ -153,6 +208,11 @@
 			<td> </td>
 		</tr>
 		<tr>
+			<td>VatsimHelpYT</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
 			<td>VatspyColors</td>
 			<td> </td>
 			<td> </td>
@@ -161,6 +221,16 @@
 			<td>VirtualUSAFlyingClub</td>
 			<td> </td>
 			<td>vUSAFC</td>
+		</tr>
+		<tr>
+			<td>Voyager</td>
+			<td> </td>
+			<td>Voy</td>
+		</tr>
+		<tr>
+			<td>WallOP</td>
+			<td> </td>
+			<td> </td>
 		</tr>
 		<tr>
 			<td>WestWind</td>
