start formatting table

--- a/Commands.html
+++ b/Commands.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>stw222 stream commands</title>
+<style>
+	body {padding: 2%}
+	table {align-content: center; border: double; padding: 1%; }
+	tr {align-content: center; border: thin; padding: 1%; }
+	th {align-content: center; border: thin; padding: 1%; }
+</style>
 </head>
 
 <body>
@@ -176,6 +182,11 @@
 			<td>RandomFlight</td>
 			<td> </td>
 			<td> </td>
+		</tr>
+		<tr>
+			<td>Shoutout</td>
+			<td>(Twitch name)</td>
+			<td>so</td>
 		</tr>
 		<tr>
 			<td>Specs</td>
