more table formatting

--- a/Commands.html
+++ b/Commands.html
@@ -1,279 +1,277 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>stw222 stream commands</title>
-<style>
-	body {padding: 2%}
-	table {align-content: center; border: double; padding: 1%; }
-	tr {align-content: center; border: thin; padding: 1%; }
-	th {align-content: center; border: thin; padding: 1%; }
-</style>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>stw222 stream commands</title>
+		<style>
+			body   {padding: 2%}
+			table tr td, th {margin-top: 10px; margin-bottom 10px; border-top: 1px solid; border-right: 1px dashed; padding: 5px}
+			table  {align-content: center; border: double; margin: 1%; padding: 10px; border-collapse: collapse; text-align: center; vertical-align: bottom;}
+		</style>
+	</head>
 
-<body>
-	<h1>Hi</h1>
-	<p><i>Dark Mode coming soon</i></p>
-	<h2>stw222 stream commands:</h2>
-	<p>All commands are prefixed with a "!"</p>
-	<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
-	<table>
-		<tr>
-			<th>Command</th>
-			<th>Variables</th>
-			<th>Abbriviations</th>
-		</tr>
-		<tr>
-			<td>AdBreak</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>ATIS</td>
-			<td>(Atis word)</td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Buffalo-Wings</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>C152</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Callsigns</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>CentimeterDefeater</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Certs</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Chair</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Discord</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Echi</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Epic</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>EssentialsCourse</td>
-			<td> </td>
-			<td>EC</td>
-		</tr>
-		<tr>
-			<td>First</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Flightplan</td>
-			<td> </td>
-			<td>FP  Plan  Route</td>
-		</tr>
-		<tr>
-			<td>ForeverApproach</td>
-			<td> </td>
-			<td>FA</td>
-		</tr>
-		<tr>
-			<td>Gottem</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>GreatCycleChallenge</td>
-			<td> </td>
-			<td>GCC</td>
-		</tr>
-		<tr>
-			<td>Invis</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Last</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>LearnATC</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Lurk</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>MistaAhneating</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>MistaDrippy</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>MistaShempasta</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>MistaStew</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>MistaTexas</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Newbie</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Onlyfans</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Pedals</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Piotato</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Prime</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>RandomFlight</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Shoutout</td>
-			<td>(Twitch name)</td>
-			<td>so</td>
-		</tr>
-		<tr>
-			<td>Specs</td>
-			<td> </td>
-			<td>PC</td>
-		</tr>
-		<tr>
-			<td>ThePilotClub</td>
-			<td> </td>
-			<td>TPC  Pilotclub</td>
-		</tr>
-		<tr>
-			<td>Throttle</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>TrackIR</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Tracker</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Vatsim</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>VatsimHelpYT</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>VatspyColors</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>VirtualUSAFlyingClub</td>
-			<td> </td>
-			<td>vUSAFC</td>
-		</tr>
-		<tr>
-			<td>Voyager</td>
-			<td> </td>
-			<td>Voy</td>
-		</tr>
-		<tr>
-			<td>WallOP</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>WestWind</td>
-			<td> </td>
-			<td>WWA</td>
-		</tr>
-		<tr>
-			<td>Wings</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>Yoke</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>YouTube</td>
-			<td> </td>
-			<td>YT</td>
-		</tr>
-		<tr>
-			<td>ZHU</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>ZID</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-	</table>
-	
-</body>
+	<body>
+		<h1>Hi</h1>
+		<p><i>Dark Mode coming soon</i></p>
+		<h2>stw222 stream commands:</h2>
+		<p>All commands are prefixed with a "!"</p>
+		<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
+		<table>
+			<tr>
+				<th>Command</th>
+				<th>Variables</th>
+				<th>Abbriviations</th>
+			</tr>
+			<tr>
+				<td>AdBreak</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>ATIS</td>
+				<td>(Atis word)</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Buffalo-Wings</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>C152</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Callsigns</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>CentimeterDefeater</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Certs</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Chair</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Discord</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Echi</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Epic</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>EssentialsCourse</td>
+				<td></td>
+				<td>EC</td>
+			</tr>
+			<tr>
+				<td>First</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Flightplan</td>
+				<td></td>
+				<td>FP Plan Route</td>
+			</tr>
+			<tr>
+				<td>ForeverApproach</td>
+				<td></td>
+				<td>FA</td>
+			</tr>
+			<tr>
+				<td>Gottem</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>GreatCycleChallenge</td>
+				<td></td>
+				<td>GCC</td>
+			</tr>
+			<tr>
+				<td>Invis</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Last</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>LearnATC</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Lurk</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>MistaAhneating</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>MistaDrippy</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>MistaShempasta</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>MistaStew</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>MistaTexas</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Newbie</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Onlyfans</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Pedals</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Piotato</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Prime</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>RandomFlight</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Shoutout</td>
+				<td>(Twitch name)</td>
+				<td>so</td>
+			</tr>
+			<tr>
+				<td>Specs</td>
+				<td></td>
+				<td>PC</td>
+			</tr>
+			<tr>
+				<td>ThePilotClub</td>
+				<td></td>
+				<td>TPC Pilotclub</td>
+			</tr>
+			<tr>
+				<td>Throttle</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>TrackIR</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Tracker</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Vatsim</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>VatsimHelpYT</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>VatspyColors</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>VirtualUSAFlyingClub</td>
+				<td></td>
+				<td>vUSAFC</td>
+			</tr>
+			<tr>
+				<td>Voyager</td>
+				<td></td>
+				<td>Voy</td>
+			</tr>
+			<tr>
+				<td>WallOP</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>WestWind</td>
+				<td></td>
+				<td>WWA</td>
+			</tr>
+			<tr>
+				<td>Wings</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Yoke</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>YouTube</td>
+				<td></td>
+				<td>YT</td>
+			</tr>
+			<tr>
+				<td>ZHU</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>ZID</td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+	</body>
 </html>
