--- a/Commands.html
+++ b/Commands.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>stw222 stream commands</title>
 		<style>
-			body   {padding: 2%}
+			body   {padding: 2%; height: 100%; width: 100%}
 			table tr td, th {margin-top: 10px; margin-bottom 10px; border-top: 1px solid; border-right: 1px dashed; padding: 5px}
 			table  {align-content: center; border: double; margin: 1%; padding: 10px; border-collapse: collapse; text-align: center; vertical-align: bottom;}
 		</style>
@@ -273,5 +273,8 @@
 				<td></td>
 			</tr>
 		</table>
+		<br>
+		<h2>Moderator Only Commands:</h2>
+		<p>TBD</p>
 	</body>
 </html>
