added Stream elements commands and mod commands

--- a/Commands.html
+++ b/Commands.html
@@ -118,6 +118,11 @@
 				<th>Abbriviations</th>
 			</tr>
 			<tr>
+				<td>AccountAge</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>AdBreak</td>
 				<td></td>
 				<td></td>
@@ -158,6 +163,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Commands</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Discord</td>
 				<td></td>
 				<td></td>
@@ -186,6 +196,11 @@
 				<td>Flightplan</td>
 				<td></td>
 				<td>FP Plan Route</td>
+			</tr>
+			<tr>
+				<td>FollowAge</td>
+				<td></td>
+				<td>HowLong</td>
 			</tr>
 			<tr>
 				<td>ForeverApproach</td>
@@ -298,12 +313,22 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Tip</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>TrackIR</td>
 				<td></td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>Tracker</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Uptime</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -334,6 +359,11 @@
 			</tr>
 			<tr>
 				<td>WallOP</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>WatchTime</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -370,7 +400,29 @@
 		</table>
 		<br>
 		<h2>Moderator Only Commands:</h2>
-		<p>TBD</p>
+		<table>
+			<tr>
+				<th>Command</th>
+				<th>Variables</th>
+				<th>Use</th>
+			</tr>
+			<tr>
+				<td>AddRips</td>
+				<td></td>
+				<td>Add 1 rip to the rip counter during ATC streams</td>
+			</tr>
+			<tr>
+				<td>RemoveRips</td>
+				<td></td>
+				<td>remove 1 rip from the rip counter during ATC streams</td>
+			</tr>
+			<tr>
+				<td>Permit</td>
+				<td>(Username)</td>
+				<td>Prevent someone from being timed out by Automod for 60 seconds</td>
+			</tr>
+			
+		</table>
 		
 		<script>
 		function toggle_light_mode() {
