added links to the top

--- a/Commands.html
+++ b/Commands.html
@@ -108,6 +108,10 @@
 			<span></span>
 		</button> 
     	</div>
+		<p>Shortened link to this page:</p>
+		<a href="http://commands.stw222.live">http://commands.stw222.live</a>
+		<p>Full link to this page:</p>
+		<a href="https://stw222.github.io/TwitchCommands/Commands.html">https://stw222.github.io/TwitchCommands/Commands.html</a>
 		<h2>stw222 stream commands:</h2>
 		<p>All commands are prefixed with a "!"</p>
 		<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
