--- a/Commands.html
+++ b/Commands.html
@@ -112,6 +112,7 @@
 		<a href="http://commands.stw222.live">http://commands.stw222.live</a>
 		<p>Full link to this page:</p>
 		<a href="https://stw222.github.io/TwitchCommands/Commands.html">https://stw222.github.io/TwitchCommands/Commands.html</a>
+		<br>
 		<p>These commands are for stw222's Twitch stream here: <a href="https://twitch.tv/stw222">https://twitch.tv/stw222</a></p>
 		<h2>Stream commands:</h2>
 		<p>All commands are prefixed with a "!"</p>
@@ -414,12 +415,12 @@
 			<tr>
 				<td>AddRips</td>
 				<td></td>
-				<td>Add 1 rip to the rip counter during ATC streams</td>
+				<td>Add 1 RIP to the rip counter during ATC streams</td>
 			</tr>
 			<tr>
 				<td>RemoveRips</td>
 				<td></td>
-				<td>remove 1 rip from the rip counter during ATC streams</td>
+				<td>Remove 1 RIP from the rip counter during ATC streams</td>
 			</tr>
 			<tr>
 				<td>Permit</td>
