--- a/Commands.html
+++ b/Commands.html
@@ -111,9 +111,9 @@
 		<p>Shortened link to this page:</p>
 		<a href="http://commands.stw222.live">http://commands.stw222.live</a>
 		<p>Full link to this page:</p>
-		<a href="https://stw222.github.io/TwitchCommands/Commands.html">https://stw222.github.io/TwitchCommands/Commands.html</a>
+		<a href="https://stw222.github.io/TwitchCommands/Commands.html">stw222.github.io/TwitchCommands/Commands.html</a>
 		<br>
-		<p>These commands are for stw222's Twitch stream here: <a href="https://twitch.tv/stw222">https://twitch.tv/stw222</a></p>
+		<p>These commands are for stw222's Twitch stream here: <a href="https://twitch.tv/stw222">twitch.tv/stw222</a></p>
 		<h2>Stream commands:</h2>
 		<p>All commands are prefixed with a "!"</p>
 		<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
