--- a/Commands.html
+++ b/Commands.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>stw222 stream commands</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<style>
 			body   {
 				padding: 2%;
