add stw222 image

--- a/Commands.html
+++ b/Commands.html
@@ -85,6 +85,7 @@
 	</head>
 
 	<body>
+		<img src="profile picture 1 v3.png" style="width: 150px">
 		<!-- Dark mode tutorial from here: https://henryegloff.com/how-to-code-a-simple-dark-mode-toggle/ -->
 		<script>
 			var app = document.getElementsByTagName("BODY")[0];
