added stream avatars info

--- a/Commands.html
+++ b/Commands.html
@@ -85,7 +85,7 @@
 	</head>
 
 	<body>
-		<img src="profile picture 1 v3.png" style="width: 150px">
+		<img src="profile picture 1 v3.png" alt="stw222 profile picture" style="width: 150px">
 		<!-- Dark mode tutorial from here: https://henryegloff.com/how-to-code-a-simple-dark-mode-toggle/ -->
 		<script>
 			var app = document.getElementsByTagName("BODY")[0];
@@ -110,6 +110,7 @@
 			<span></span>
 		</button> 
     	</div>
+		<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
 		<p>Shortened link to this page:</p>
 		<a href="http://commands.stw222.live">http://commands.stw222.live</a>
 		<p>Full link to this page:</p>
@@ -118,7 +119,7 @@
 		<p>These commands are for stw222's Twitch stream here: <a href="https://twitch.tv/stw222">twitch.tv/stw222</a></p>
 		<h2>Stream commands:</h2>
 		<p>All commands are prefixed with a "!"</p>
-		<p>*<i>Sometimes you may need to use CTRL + F5 to get the newest version of this page</i>*</p>
+		<!-- Norm commands -->
 		<table>
 			<tr>
 				<th>Command</th>
@@ -407,7 +408,92 @@
 			</tr>
 		</table>
 		<br>
-		<h2>Moderator Only Commands:</h2>
+		<h3>Stream Avatars Commands</h3>
+		<i><a href="https://docs.streamavatars.com/stream-avatars/commands">SA Command Documentation</a></i>
+		<p>Only some SA commands will be shown below</p>
+		<table>
+			<tr>
+				<th>Command</th>
+				<th>Variables</th>
+				<th>Category</th>
+				<th>viewers/Mods</th>
+			</tr>
+			<tr>
+				<td>dance, attack, hug, bomb</td>
+				<td>(Target user)</td>
+				<td>actions</td>
+				<td>viewers</td>
+			</tr>
+			<tr>
+				<td>basketball</td>
+				<td>(point reward) (score limit) (game length in minutes)</td>
+				<td>minigames</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>battleroyale</td>
+				<td>(optional: point reward)</td>
+				<td>minigames</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>boss</td>
+				<td>(boss name ex: pumpkin_king) (optional: difficulty)</td>
+				<td>minigames</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>dual</td>
+				<td>(user name) (point amount)</td>
+				<td>minigames</td>
+				<td>viewers</td>
+			</tr>
+			<tr>
+				<td>bomb</td>
+				<td>(user name) - you can target yourself</td>
+				<td>minigames</td>
+				<td>viewers</td>
+			</tr>
+			<tr>
+				<td>sling</td>
+				<td>(power out of 100) (angle)</td>
+				<td>actions</td>
+				<td>viewers</td>
+			</tr>
+			<tr>
+				<td>fart</td>
+				<td> </td>
+				<td>actions</td>
+				<td>viewers</td>
+			</tr>
+			<tr>
+				<td>throw</td>
+				<td>(username) (target username)</td>
+				<td>actions</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>explode</td>
+				<td>(username)</td>
+				<td>actions</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>spawn game</td>
+				<td>(point reward) OR (point reward) (number of stars)</td>
+				<td>minigames</td>
+				<td>mods</td>
+			</tr>
+			<tr>
+				<td>mass</td>
+				<td>(basically any command)</td>
+				<td>minigames</td>
+				<td>mods</td>
+			</tr>
+		</table>
+		<br>
+		<!-- Mod commands -->
+		<h3>Moderator Only Commands:</h3>
 		<table>
 			<tr>
 				<th>Command</th>
