--- a/Commands.html
+++ b/Commands.html
@@ -354,7 +354,7 @@
 			<tr>
 				<td>VatspyColors</td>
 				<td></td>
-				<td></td>
+				<td>vsc</td>
 			</tr>
 			<tr>
 				<td>VirtualUSAFlyingClub</td>
@@ -411,6 +411,7 @@
 		<h3>Stream Avatars Commands</h3>
 		<i><a href="https://docs.streamavatars.com/stream-avatars/commands">SA Command Documentation</a></i>
 		<p>Only some SA commands will be shown below</p>
+		<!-- SA commands -->
 		<table>
 			<tr>
 				<th>Command</th>
