--- a/Commands.html
+++ b/Commands.html
@@ -247,6 +247,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Meow</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>MistaAhneating</td>
 				<td></td>
 				<td></td>
