added a few commands

--- a/Commands.html
+++ b/Commands.html
@@ -167,12 +167,22 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>CoinFlip</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Chair</td>
 				<td></td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>Commands</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Date</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -196,6 +206,11 @@
 				<td></td>
 				<td>EC</td>
 			</tr>
+			<!-- <tr>
+				<td>FirstBump</td>
+				<td>(username)</td>
+				<td></td>
+			</tr> -->
 			<tr>
 				<td>First</td>
 				<td></td>
@@ -206,11 +221,16 @@
 				<td></td>
 				<td>FP Plan Route</td>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td>FollowAge</td>
 				<td></td>
 				<td>HowLong</td>
 			</tr>
+			<tr>
+				<td>Followed</td>
+				<td></td>
+				<td></td>
+			</tr> -->
 			<tr>
 				<td>ForeverApproach</td>
 				<td></td>
@@ -226,11 +246,16 @@
 				<td></td>
 				<td>GCC</td>
 			</tr>
-			<tr>
-				<td>Invis</td>
+			<!-- <tr>
+				<td>HeadPat</td>
+				<td>(Username)</td>
 				<td></td>
+			</tr> -->
+			<!-- <tr>
+				<td>HighFive</td>
+				<td>(Username)</td>
 				<td></td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td>Last</td>
 				<td></td>
@@ -327,9 +352,14 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Time</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Tip</td>
 				<td></td>
-				<td></td>
+				<td>Donate</td>
 			</tr>
 			<tr>
 				<td>TrackIR</td>
