--- a/Commands.html
+++ b/Commands.html
@@ -302,6 +302,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Modelmatching</td>
+				<td></td>
+				<td>ModelMatch</td>
+			</tr>
+			<tr>
 				<td>Newbie</td>
 				<td></td>
 				<td></td>
