add disable and eneable events commands for mods

--- a/Commands.html
+++ b/Commands.html
@@ -539,22 +539,38 @@
 			<tr>
 				<th>Command</th>
 				<th>Variables</th>
+				<td>Abbriviations</td>
 				<th>Use</th>
 			</tr>
 			<tr>
 				<td>AddRips</td>
+				<td></td>
 				<td></td>
 				<td>Add 1 RIP to the rip counter during ATC streams</td>
 			</tr>
 			<tr>
 				<td>RemoveRips</td>
 				<td></td>
+				<td></td>
 				<td>Remove 1 RIP from the rip counter during ATC streams</td>
 			</tr>
 			<tr>
 				<td>Permit</td>
 				<td>(Username)</td>
+				<td></td>
 				<td>Prevent someone from being timed out by Automod for 60 seconds</td>
+			</tr>
+			<tr>
+				<td>DisableEvents</td>
+				<td></td>
+				<td>DE</td>
+				<td>Disable chat messages for things such as follows, donos, subs, etc in the case of raids or spam</td>
+			</tr>
+			<tr>
+				<td>EnableEvents</td>
+				<td></td>
+				<td>EE</td>
+				<td>Re-enable notification messages after a raid</td>
 			</tr>
 			
 		</table>
