added latest command

--- a/Commands.html
+++ b/Commands.html
@@ -242,6 +242,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Latest</td>
+				<td></td>
+				<td>NewYT</td>
+			</tr>
+			<tr>
 				<td>LearnATC</td>
 				<td></td>
 				<td></td>
