added the mcmap command

--- a/Commands.html
+++ b/Commands.html
@@ -257,6 +257,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>MCMap</td>
+				<td></td>
+				<td>MinecraftMap CaptiveMap</td>
+			</tr>
+			<tr>
 				<td>Meow</td>
 				<td></td>
 				<td></td>
