--- a/Commands.html
+++ b/Commands.html
@@ -469,7 +469,7 @@
 				<td>mods</td>
 			</tr>
 			<tr>
-				<td>dual</td>
+				<td>duel</td>
 				<td>(user name) (point amount)</td>
 				<td>minigames</td>
 				<td>viewers</td>
