--- a/Commands.html
+++ b/Commands.html
@@ -142,6 +142,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Box</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Buffalo-Wings</td>
 				<td></td>
 				<td></td>
@@ -401,11 +406,11 @@
 				<td></td>
 				<td></td>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td>WestWind</td>
 				<td></td>
 				<td>WWA</td>
-			</tr>
+			</tr>-->
 			<tr>
 				<td>Wings</td>
 				<td></td>
