--- a/Commands.html
+++ b/Commands.html
@@ -142,12 +142,12 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td>Box</td>
+				<td>Bingo</td>
 				<td></td>
 				<td></td>
 			</tr>
 			<tr>
-				<td>Buffalo-Wings</td>
+				<td>Box</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -372,6 +372,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>TTS</td>
+				<td></td>
+				<td>Monster MonsterTTS</td>
+			</tr>
+			<tr>
 				<td>Vatsim</td>
 				<td></td>
 				<td></td>
@@ -406,15 +411,15 @@
 				<td></td>
 				<td></td>
 			</tr>
-			<!-- <tr>
-				<td>WestWind</td>
-				<td></td>
-				<td>WWA</td>
-			</tr>-->
 			<tr>
 				<td>Wings</td>
 				<td></td>
 				<td></td>
+			</tr>
+			<tr>
+				<td>Wishlist</td>
+				<td></td>
+				<td>WL Throne</td>
 			</tr>
 			<tr>
 				<td>Yoke</td>
