--- a/Commands.html
+++ b/Commands.html
@@ -387,6 +387,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Vatspy</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>VatspyColors</td>
 				<td></td>
 				<td>vsc</td>
