--- a/Commands.html
+++ b/Commands.html
@@ -187,6 +187,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>CTAF</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Date</td>
 				<td></td>
 				<td></td>
