--- a/Commands.html
+++ b/Commands.html
@@ -142,6 +142,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Bark</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Bingo</td>
 				<td></td>
 				<td></td>
