--- a/Commands.html
+++ b/Commands.html
@@ -202,6 +202,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>DCSFRA</td>
+				<td></td>
+				<td>DC-SFRA</td>
+			</tr>
+			<tr>
 				<td>Discord</td>
 				<td></td>
 				<td></td>
@@ -319,7 +324,7 @@
 			<tr>
 				<td>Onlyfans</td>
 				<td></td>
-				<td></td>
+				<td>OF</td>
 			</tr>
 			<tr>
 				<td>Pedals</td>
