--- a/Commands.html
+++ b/Commands.html
@@ -347,6 +347,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>riahc</td>
+				<td></td>
+				<td></td>
+			<tr/>
+			<tr>
 				<td>Shoutout</td>
 				<td>(Twitch name)</td>
 				<td>so</td>
