--- a/Commands.html
+++ b/Commands.html
@@ -137,6 +137,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Alakazam</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>ATIS</td>
 				<td>(Atis word)</td>
 				<td></td>
@@ -256,6 +261,11 @@
 				<td></td>
 				<td>GCC</td>
 			</tr> -->
+			<tr>
+				<td>Jude</td>
+				<td></td>
+				<td></td>
+			</tr>
 			<tr>
 				<td>Last</td>
 				<td></td>
