--- a/Commands.html
+++ b/Commands.html
@@ -407,7 +407,7 @@
 				<td>Monster MonsterTTS</td>
 			</tr>
 			<tr>
-				<td>Unown</td>
+				<td>Unown</td> /* pokemon */
 				<td></td>
 				<td></td>
 			</tr>
