--- a/Commands.html
+++ b/Commands.html
@@ -572,7 +572,7 @@
 				<td>Abbriviations</td>
 				<th>Use</th>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td>AddRips</td>
 				<td></td>
 				<td></td>
@@ -583,7 +583,7 @@
 				<td></td>
 				<td></td>
 				<td>Remove 1 RIP from the rip counter during ATC streams</td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td>Permit</td>
 				<td>(Username)</td>
@@ -601,6 +601,12 @@
 				<td></td>
 				<td>EE</td>
 				<td>Re-enable notification messages after a raid</td>
+			</tr>
+			<tr>
+				<td>nofirst</td>
+				<td></td>
+				<td></td>
+				<td>to disable the first trophy in the case that no one claims it, or the stream needs to be restarted</td>
 			</tr>
 			
 		</table>
