--- a/Commands.html
+++ b/Commands.html
@@ -137,6 +137,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>AirDevil</td>
+				<td></td>
+				<td>AD</td>
+			</tr>
+			<tr>
 				<td>Alakazam</td>
 				<td></td>
 				<td></td>
