--- a/Commands.html
+++ b/Commands.html
@@ -437,6 +437,11 @@
 				<td>vsc</td>
 			</tr>
 			<tr>
+				<td>VatsimRadar</td>
+				<td></td>
+				<td>VR</td>
+			</tr>
+			<tr>
 				<td>VirtualUSAFlyingClub</td>
 				<td></td>
 				<td>vUSAFC</td>
@@ -460,11 +465,6 @@
 				<td>Wings</td>
 				<td></td>
 				<td></td>
-			</tr>
-			<tr>
-				<td>Wishlist</td>
-				<td></td>
-				<td>WL Throne</td>
 			</tr>
 			<tr>
 				<td>Yoke</td>
