--- a/Commands.html
+++ b/Commands.html
@@ -267,6 +267,11 @@
 				<td>GCC</td>
 			</tr> -->
 			<tr>
+				<td>Hi15td</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Jude</td>
 				<td></td>
 				<td></td>
@@ -483,11 +488,11 @@
 			</tr>
 		</table>
 		<br>
-		<h3>Stream Avatars Commands</h3>
+		<!--<h3>Stream Avatars Commands</h3>
 		<i><a href="https://docs.streamavatars.com/stream-avatars/commands">SA Command Documentation</a></i>
 		<p>Only some SA commands will be shown below</p>
 		<!-- SA commands -->
-		<table>
+		<!--<table>
 			<tr>
 				<th>Command</th>
 				<th>Variables</th>
