--- a/Commands.html
+++ b/Commands.html
@@ -347,6 +347,11 @@
 				<td>OF</td>
 			</tr>
 			<tr>
+				<td>pancake</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Pedals</td>
 				<td></td>
 				<td></td>
