--- a/Commands.html
+++ b/Commands.html
@@ -357,6 +357,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>PilotPassport</td>
+				<td></td>
+				<td>ZTL</td>
+			</tr>
+			<tr>
 				<td>Piotato</td>
 				<td></td>
 				<td></td>
