--- a/Commands.html
+++ b/Commands.html
@@ -496,6 +496,11 @@
 				<td></td>
 				<td></td>
 			</tr>
+			<tr>
+				<td>ZMELive</td>
+				<td></td>
+				<td></td>
+			</tr>
 		</table>
 		<br>
 		<!--<h3>Stream Avatars Commands</h3>
