--- a/Commands.html
+++ b/Commands.html
@@ -610,6 +610,16 @@
 				<td>Remove 1 RIP from the rip counter during ATC streams</td>
 			</tr> -->
 			<tr>
+				<th>EditFlightPlan</th>
+				<th>(message)</th>
+				<th>EFP</th>
+			</tr>
+			<tr>
+				<th>EditFeaturedAirport</th>
+				<th>(message)</th>
+				<th>EFA</th>
+			</tr>
+			<tr>
 				<td>Permit</td>
 				<td>(Username)</td>
 				<td></td>
