--- a/Commands.html
+++ b/Commands.html
@@ -357,7 +357,7 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td></td>
+				<td>PilotHelp</td>
 				<td></td>
 				<td>VatsimPilotHelp VPH PH Help</td>
 			</tr>
