--- a/Commands.html
+++ b/Commands.html
@@ -307,6 +307,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>merrymoment</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>MistaAhneating</td>
 				<td></td>
 				<td></td>
