--- a/Commands.html
+++ b/Commands.html
@@ -307,6 +307,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>MerryMid</td>
+				<td></td>
+				<td>MM</td>
+			</tr>
+			<tr>
 				<td>merrymoment</td>
 				<td></td>
 				<td></td>
