--- a/Commands.html
+++ b/Commands.html
@@ -402,6 +402,11 @@
 				<td>so</td>
 			</tr>
 			<tr>
+				<td>Schedule</td>
+				<td></td>
+				<td>streams upcoming</td>
+			</tr>
+			<tr>
 				<td>Specs</td>
 				<td></td>
 				<td>PC</td>
