--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<p>Shortened link to this page:</p>
 		<a href="http://commands.stw222.live">http://commands.stw222.live</a>
 		<p>Full link to this page:</p>
-		<a href="https://stw222.github.io/TwitchCommands/Commands.html">stw222.github.io/TwitchCommands/Commands.html</a>
+		<a href="https://stw222.github.io/TwitchCommands">stw222.github.io/TwitchCommands</a>
 		<br>
 		<p>These commands are for stw222's Twitch stream here: <a href="https://twitch.tv/stw222">twitch.tv/stw222</a></p>
 		<h2>Stream commands:</h2>
