Add new command entry for Drth in the stream commands table

--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>Drth</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td>Emotes</td>
 				<td></td>
 				<td></td>
