--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			}
 			table tr td, th {
 				margin-top: 10px;
-				margin-bottom 10px;
+				margin-bottom: 10px;
 				border-top: 1px solid;
 				border-right: 1px dashed;
 				padding: 5px
