--- a/index.html
+++ b/index.html
@@ -517,6 +517,11 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td>ZIDSplit</td>
+				<td></td>
+				<td>Split</td>
+			</tr>
+			<tr>
 				<td>ZMELive</td>
 				<td></td>
 				<td></td>
