remove account age

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				padding: 5px
 			}
 			table  {
-				center; border: double;
+				border: double;
 				margin: 1%;
 				padding: 10px;
 				border-collapse: collapse;
@@ -125,11 +125,6 @@
 				<th>Command</th>
 				<th>Variables</th>
 				<th>Abbriviations</th>
-			</tr>
-			<tr>
-				<td>AccountAge</td>
-				<td></td>
-				<td></td>
 			</tr>
 			<tr>
 				<td>AdBreak</td>
