add FA remove forever approach

--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
 				<td>EC</td>
 			</tr>
 			<tr>
+				<td>FeaturedAirport</td>
+				<td></td>
+				<td>FA Featured</td>
+			</tr>
+			<tr>
 				<td>First</td>
 				<td></td>
 				<td></td>
@@ -251,11 +256,6 @@
 				<td></td>
 				<td>HowLong</td>
 			</tr> -->
-			<tr>
-				<td>ForeverApproach</td>
-				<td></td>
-				<td>FA</td>
-			</tr>
 			<tr>
 				<td>Gottem</td>
 				<td></td>
